@@ -1,7 +1,14 @@
 package com.lzh.game.framework.socket.core.invoke;
 
 import com.lzh.game.framework.socket.annotation.Receive;
+import com.lzh.game.framework.socket.core.protocol.message.MessageDefine;
+import com.lzh.game.framework.socket.core.protocol.message.Protocol;
+import com.lzh.game.framework.utils.bean.EnhanceMethodInvoke;
+import com.lzh.game.framework.utils.bean.HandlerMethod;
+import com.lzh.game.framework.utils.bean.MethodInvoke;
+import com.lzh.game.framework.utils.bean.MethodInvokeUtils;
 import lombok.Data;
+import lombok.experimental.Accessors;
 
 import java.lang.reflect.Method;
 import java.util.List;
@@ -24,17 +31,34 @@ public class InvokeUtils {
     }
 
     private static InvokeModel toModel(Object bean, Method method) {
-        EnhanceHandlerMethod invoke = new EnhanceHandlerMethod(bean, method);
-        Receive mapping = method.getAnnotation(Receive.class);
-        return parseTargetMethod(mapping, invoke);
+        Receive receive = method.getAnnotation(Receive.class);
+        if (Objects.isNull(receive)) {
+            return null;
+        }
+        return parseTargetMethod(receive, bean, new HandlerMethod(bean, method));
     }
 
-    private static InvokeModel parseTargetMethod(Receive mapping, EnhanceHandlerMethod method) {
-        int cmd = mapping.value();
+    /**
+     * {@link com.lzh.game.framework.socket.core.protocol.message.Protocol}
+     * {@link Receive}
+     * @param receive
+     * @param bean
+     * @param method
+     * @return
+     */
+    private static InvokeModel parseTargetMethod(Receive receive, Object bean, HandlerMethod method) {
 
-        List<Class<?>> protoParamType = Stream.of(method.getParamsType())
-                .collect(Collectors.toList());
-        InvokeModel methodMapping = buildMapping(method, cmd);
+        Protocol protocol = getProtoCol(method.getParamsType());
+        if (receive.value() != 0 && Objects.nonNull(protocol)) {
+            throw new IllegalArgumentException(bean.getClass().getName() + "." + method.getName() + " Duplicate definition @Receive and @Protocol");
+        }
+        boolean useSimpleProto = receive.value() != 0;
+
+//        int msgId = receive.value() != 0 ? receive.value() : protocol.value();
+
+//        List<Class<?>> protoParamType = Stream.of(method.getParamsType()).toList();
+
+//        InvokeModel methodMapping = buildMapping(method, cmd);
         // Set method proto param
         if (!protoParamType.isEmpty()) {
             methodMapping.setParamClass(protoParamType.get(0));
@@ -43,21 +67,40 @@ public class InvokeUtils {
         return methodMapping;
     }
 
-    private static InvokeModel buildMapping(EnhanceHandlerMethod method, int request) {
+    //
+    private static MessageDefine buildMethodMessageDefine(HandlerMethod method) {
+        for (Class<?> type : method.getParamsType()) {
+            if (type.isPrimitive()) {
+
+            }
+        }
+    }
+
+    private static Protocol getProtoCol(Class<?>[] types) {
+        for (Class<?> type : types) {
+            if (type.isAnnotationPresent(Protocol.class)) {
+                return type.getAnnotation(Protocol.class);
+            }
+        }
+        return null;
+    }
+
+    private static InvokeModel buildMapping(HandlerMethod method, int msgId) {
         InvokeModel methodMapping = new InvokeModel();
-        methodMapping.setValue(request);
+        methodMapping.setValue(msgId);
         methodMapping.setHandlerMethod(method);
         return methodMapping;
     }
 
     @Data
+    @Accessors(chain = true)
     public static class InvokeModel {
         /**
          * cmd id
          */
         private int value;
 
-        private EnhanceHandlerMethod handlerMethod;
+        private EnhanceMethodInvoke handlerMethod;
 
         private Class<?> paramClass;
 
